refactor: simplify core runtime and move sync to async layer
Remove synchronized from LiarBarTable methods, delegating thread
safety to AsyncTableRuntime. Simplify CoreEvent defensive copy
with Map.copyOf. Add tableIds() to RuntimeManager, make removeTable
return boolean. Refactor command handlers to accept explicit tableId
args instead of relying on implicit state.